# Max-Waine-Final-Year-Project

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake
source/: main.cpp  shader_fragment.h  shader_vertex.h
